text update, tech section mobile fix

--- a/main.css
+++ b/main.css
@@ -26,7 +26,8 @@ section { padding: 50px 0 50px 0; border-bottom: 1px solid silver;}
 #services h4 { text-align: center;}
 
 #technology { background: hsl(0,0%,95%); }
-#technology .row { margin: 1.5em 0;}
+#technology .img-responsive { margin: 1em auto; }
+/*#technology .row { margin: 1.5em 0;}*/
 
 .sticky {
 	/*background:hsla(50, 60%, 85%, 0.95);*/
